# vakfu

./: .gitignore  .rustfmt.toml  Cargo.toml
.github/: dependabot.yml
src/: main.rs
src/assets/: jar.rs  mod.rs
src/map/: element.rs  frames.rs
src/systems/: camera.rs  navigation.rs  render.rs  settings.rs  setup.rs  ui.rs
