[package]
name = "vakfu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
pico-args = "0.5.0"
byte = "0.2.6"
modular-bitfield = "0.11.2"
glam = "0.23.0"
itertools = "0.10.5"
bevy_sprite = "0.10.1"
bevy_ui = "0.10.1"
bevy_math = "0.10.1"
bevy_window = "0.10.1"

[dependencies.zip]
version = "0.6.4"
default-features = false
features = [ "deflate" ]

[dependencies.bevy]
version = "0.10.1"
default-features = false
features = [ "bevy_winit", "bevy_render", "x11", "bevy_asset", "bevy_scene" ]

[dependencies.bevy_egui]
version = "0.20.2"
default-features = false
features = []